--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "python/mason/driver/python-ifc"]
 	path = python/mason/driver/pythonifc
-	url = https://github.com/mvaerle/python-ifc
+	url = https://github.com/gtfierro/python-ifc
